--- a/index.html
+++ b/index.html
@@ -786,11 +786,15 @@
                 <!-- <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">SSDS</a> -->
                 
                 <p>
-                    During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/davidywang/" target="_blank" rel="noopener noreferrer">David Wang</a> and helped contribute to his research project. David was studying Black Hats (a term for malicious hackers) who were abusively manipulating search engine results to steer people towards fradulent websites that sold counterfeit luxury goods. During his research, he identified 52 unique search engine optimization (SEO) campaigns that were selling fake products of sixteen different luxury brands.
+                    During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/davidywang/" target="_blank" rel="noopener noreferrer">David Wang</a> and helped contribute to his research project. David was studying Black Hats (a term for malicious hackers) who were abusively manipulating search engine results to steer people towards fradulent websites that sold counterfeit luxury goods. During his research, he identified 52 distinct search engine optimization (SEO) campaigns that were selling fake products of sixteen different luxury brands.
                 </p>
 
                 <p>
                     David created a web crawler to find these fradulent websites and used it to keep a list of all the sites he found. He tasked me with the goal of developing a software program to document and collect information about these nefarious websites.
+                </p>
+
+                <p>
+                    There were two mains reasons why David wanted me to collect information on these websites. First, to collect the order number when checking out a product in order to estimate their order volume. If the websites simply incremented their order numbers by 1 for each order, then we could use the order number to estimate their order volume over time and see how much business these sites were taking from the legitimate websites. Second, he wanted me to download the source files of the checkout pages in order to see which payment processors these websites were using. This information could be used to report and disrupt the business of these fradulent websites.
                 </p>
 
                 <h5>Main Development Tasks:</h5>
