--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
                 </p>
 
                 <p>
-                    There were two mains reasons why David wanted me to collect information on these websites. First, to collect the order number when checking out a product in order to estimate their order volume. If the websites simply incremented their order numbers by 1 for each order, then we could use the order number to estimate their order volume over time and see how much business these websites were taking from the legitimate websites. Second, he wanted me to download the source files of the checkout pages in order to see which payment service provider these websites were using. This information could be used to report and disrupt the business of these fradulent websites.
+                    There were two mains reasons why David wanted me to collect information on these websites. First, to collect the order number when checking out a product in order to estimate their order volume. If the websites simply incremented their order numbers by 1 for each order, then we could use the order number to estimate their order volume over time and see how much business these websites were taking from the legitimate websites. Second, he wanted me to download the source files of the checkout pages in order to see which payment service providers these websites were using. This information could be used to report and disrupt the business of these fradulent websites.
                 </p>
 
                 <h5>Main Development Tasks:</h5>
