--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
 
                 <h1 class="long-header">Undergraduate Projects</h1>
 
-                <h2>Research Project - Search + Seizure</h2>
+                <h2>Research Project: Search + Seizure</h2>
 
                 <!-- <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">SSDS</a> -->
                 
