Modified image width

--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
 
                 <div class="image-container">
                     <a href="https://www.sysnet.ucsd.edu/projects/cloaking/searchseizure-IMC14v2.pdf" target="_blank">
-                        <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns">
+                        <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width">
                     </a>
                 </div> 
                 
