Added gap between text and image

--- a/index.html
+++ b/index.html
@@ -831,9 +831,13 @@
                     The professors I worked with and David were very pleased with the results of my work. They especially liked the fact that the program could take screenshots of all of these fradulent websites. This was a great experience for me because I was able to learn how a lot about web scraping and automation.
                 </p>
 
-                <p>
-                    By the end of the summer, I had successfully completed the software program and had helped contribute to David's research project. He even thanked me for my work in his published research paper. The title of the ressearch paper is "Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" and you can read the full paper <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">here</a>.
-                </p>
+
+                <div class="text-container large-gap">
+                    <p>
+                        By the end of the summer, I had successfully completed the software program and had helped contribute to David's research project. He even thanked me for my work in his published research paper. The title of the ressearch paper is "Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" and you can read the full paper <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">here</a>.
+                    </p>
+                </div>
+
 
                 <div class="image-container">
                     <a href="https://www.sysnet.ucsd.edu/projects/cloaking/searchseizure-IMC14v2.pdf" target="_blank">
@@ -841,7 +845,6 @@
                     </a>
                 </div> 
                 
-
 
                 <div class="parallax-container parallax-container-2"> </div>
 
