Made improvements to Project sections

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for several quarters. I tutored both lower and upper division data structure courses.
                     </p>
                     <p>
-                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read more about the ERSP program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
+                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read about the projects I worked on in this program in the "Projects" section of this website. You can also read more about the ERSP program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
                     </p>
                 </div>
 
@@ -383,7 +383,19 @@
 
                 <h2>Cryptocurrency Trading Bot</h2>
 
-                <!-- <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">SSDS?</a> -->
+                <h5>Overview:</h5>
+                <p>
+                    I created a cryptocurrency trading bot strategy using Python and the Freqtrade framework. The bot uses technical analysis indicators in order to make buy and sell decisions. It is is fully automated allowing it to trade 24/7 and works on popular cryptocurrency exchanges such as Binance and Coinbase. My strategy achieved a Compound Annual Growth Rate (CAGR) of 60.90% over a 4 year period (2021-2025), significantly outperforming the S&P 500's historical CAGR of ~10%. 
+                </p>
+
+                <h5>Key Technologies Used:</h5>
+                <ul>
+                    <li>Python</li>
+                    <li><a href="https://www.freqtrade.io/en/stable/" target="_blank" rel="noopener noreferrer">Freqtrade</a></li>
+                    <li><a href="https://pandas.pydata.org/" target="_blank" rel="noopener noreferrer">Pandas</a></li>
+                    <li><a href="https://ta-lib.github.io/ta-lib-python/" target="_blank" rel="noopener noreferrer">TA-Lib</a></li>
+                    <li>Docker</li>
+                </ul>
 
                 <p>
                     During the summer of 2022, I became extremely intrigued with the stock market and how to trade stocks. I dove deep into learning about investing and trading. I learned about Fundamental Analysis, Technical Analysis, and the investing philosophies of legendary investors such as Warren Buffett, Charlie Munger, and Peter Lynch. <a href="https://www.investopedia.com/" target="_blank" rel="noopener noreferrer">Investopedia</a> quickly became one of my favorite websites!
@@ -404,12 +416,12 @@
                 </p>
 
                 <p>
-                    Technical Analysis on the other hand is the study of a stock's price and volume data to predict future price movements in order to identify trading and investment opportunities. Technical analysts pretty much solely focus on analyzing stock charts to find patterns and trends that can then be used to make trading decisions. Unlike Fundamental Analysis, Technical Analysis is not concerned with the underlying fundamentals of a company. One of the main tools used by technical analysts are <a href="https://www.investopedia.com/terms/t/technicalindicator.asp" target="_blank" rel="noopener noreferrer">Technical Indicators</a>.
+                    Technical Analysis on the other hand is the study of a stock's price and volume data to predict future price movements in order to identify trading and investment opportunities. Technical analysts pretty much solely focus on analyzing stock charts to find patterns and trends that can then be used to make trading decisions. Unlike Fundamental Analysis, Technical Analysis is not concerned with the underlying fundamentals of a company. One of the main tools used by technical analysts are Technical Indicators.
                 </p>
 
                 <h5>Technical Indicators</h5>
                 <p>
-                    Technical indicators are mathematical heuristics and patterns based on the price and volume data of a stock. They use formulas and algorithms to derive meaningful insights from price action data. The most popular and commonly used technical indicators include MACD, RSI, Bollinger Bands, and Moving Averages. A fascinating property about technical indicators is that since they are math based, they work not just on stocks but on any asset that has price and volume data (including cryptocurrencies). In fact, they probably work better on cryptocurrencies than traditional stocks! 
+                    <a href="https://www.investopedia.com/terms/t/technicalindicator.asp" target="_blank" rel="noopener noreferrer">Technical Indicators</a> are mathematical heuristics and patterns based on the price and volume data of a stock. They use formulas and algorithms to derive meaningful insights from price action data. The most popular and commonly used technical indicators include MACD, RSI, Bollinger Bands, and Moving Averages. A fascinating property about technical indicators is that since they are math based, they work not just on stocks but on any asset that has price and volume data (including cryptocurrencies). In fact, they probably work better on cryptocurrencies than traditional stocks! 
                 </p>
 
                 <div class="image-container">
@@ -586,12 +598,48 @@
 
                 <h2>PS5 Purchasing Bot</h2>
 
+                <h5>Overview:</h5>
+                <p>
+                    During the holiday season of 2020, myself and a small community of developers came together to create a bot that would automatically purchase a PlayStation 5 (PS5) from online retailers. This project was a response to the global shortage of PS5s caused by the COVID-19 pandemic and the actions of scalpers who were using bots to buy up all of the available stock and reselling them at grossly inflated prices.
+                </p>
+
+                <h5>Main Development Tasks:</h5>
+                <ul>
+                    <li>
+                        Program the bot to navigate to a website and find the PS5 product page.
+                    </li>
+                    <li>
+                        Monitor the product page for stock availability.
+                    </li>
+                    <li>
+                        When the product became in stock, add it to the cart.
+                    </li>
+                    <li>
+                        Go through the complete checkout process and fill out all forms on the way.
+                    </li>
+                    <li>
+                        Handle any unexpected errors or interruptions that may occur.
+                    </li>
+                    <li>
+                        Fill out the payment information and successfully complete the purchase!
+                    </li>
+                </ul>
+
+                <h5>Key Technologies Used:</h5>
+                <ul>
+                    <li>Python</li>
+                    <li>PyQt5</li>
+                    <li>JavaScript</li>
+                    <li><a href="https://developer.chrome.com/docs/chromedriver" target="_blank" rel="noopener noreferrer">ChromeDriver</a></li>
+                    <li><a href="https://www.selenium.dev/documentation/webdriver/" target="_blank" rel="noopener noreferrer">Selenium WebDriver</a></li>
+                </ul>
+
                 <p>
                     2020 was an interesting year to say the least. The COVID-19 pandemic was in full swing and the world was in a state of uncertainty. In particular, the pandemic caused a global shortage of semiconductors which affected the production of many products, including the PlayStation 5.
                 </p>
 
                 <p>
-                    The long awaited PlayStation 5 (PS5) launched on November 12, 2020. The launch was highly anticipated but unfortunately, the launch was faced with unprecedented challenges due to global supply chain disruptions and high demand from gamers. This combination of unfortunate circumstances led to massive widespread stock shortages.
+                    The long awaited PlayStation 5 launched on November 12, 2020. The launch was highly anticipated but unfortunately, the launch was faced with unprecedented challenges due to global supply chain disruptions and high demand from gamers. This combination of unfortunate circumstances led to massive widespread stock shortages.
                 </p>
 
                 <p>
@@ -632,35 +680,13 @@
                 </div>
 
                 <p>
-                    The codebase was written in Python and used PyQt5 for the UI. Above is an image of the user interface. Now as a reminder, the PS5 was launched in November which meant there was a huge amount of pressure to purchase one before the holidays. Parents wanted to buy one for their kids and some simply wanted to purchase one for themselves. Consequently, the entire community was extremely motivated and determined to achieve success with our Phoenix Bot.
+                    The codebase was written in Python and used PyQt5 for the UI. Above is an image of the user interface. We also used ChromeDriver and Selenium WebDriver to power the web browser automation. Now as a reminder, the PS5 was launched in November which meant there was a huge amount of pressure to purchase one before the holidays. Parents wanted to buy one for their kids and some simply wanted to purchase one for themselves. Consequently, the entire community was extremely motivated and determined to achieve success with our Phoenix Bot.
                 </p>
 
                 <p>
                     Together as a group, we all contributed our knowledge and expertise. Luckily, some of us were educated in software development and website design. The lead developer of the project was a software engineer who was quite knowledgeable about web development and APIs. We quickly split up the work and each of us applied our skills to different parts of the project. Some worked on the UI, some worked on the purchasing logic, and some provided information about when which websites were planning to release stock online.
                 </p>
                 
-
-                <h5>Main Development Tasks:</h5>
-                <ul>
-                    <li>
-                        Program the bot to navigate to a website and find the PS5 product page.
-                    </li>
-                    <li>
-                        Monitor the product page for stock availability.
-                    </li>
-                    <li>
-                        When the product became in stock, add it to the cart.
-                    </li>
-                    <li>
-                        Go through the complete checkout process and fill out all forms on the way.
-                    </li>
-                    <li>
-                        Handle any unexpected errors or interruptions that may occur.
-                    </li>
-                    <li>
-                        Fill out the payment information and successfully complete the purchase!
-                    </li>
-                </ul>
 
                 <div class="image-container">
                     <figure>
@@ -828,7 +854,7 @@
                 </p>
 
                 <p>
-                    The professors I worked with and David were very pleased with the results of my work. They especially liked the fact that the program could take screenshots of all of these fradulent websites. This was a great experience for me because I was able to learn how a lot about web scraping and automation.
+                    The professors I worked with and David were very pleased with the results of my work. They especially liked the fact that the program could take screenshots of all of these fradulent websites. This was a great experience for me because I was able to learn how a lot about web scraping and automation. The main technologies I used were JavaScript, CasperJS, Python, and cron jobs.
                 </p>
 
 
@@ -844,6 +870,59 @@
                         <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width">
                     </a>
                 </div> 
+
+
+                <!-- <div class="section-divider"></div>
+
+
+                <h2>Research Project: Network Traffic Analysis</h2>
+
+                <p>
+                    As mentioned in the Education section of this site, myself and three other undergraduate students worked with the Systems and Networking Research Group in the UCSD CSE department. The project we worked on was.
+
+
+
+                    During the summer after my first year at UCSD, I worked with a PhD student named <a href="https://www.linkedin.com/in/louis-dekoven-a000b853/" target="_blank" rel="noopener noreferrer">Louis DeKoven</a> and helped contribute to his research project. 
+                </p>
+
+                <h5>Goals:</h5>
+                <ul>
+                    <li>
+                        Devise flags to identify risky behavior.
+                    </li>
+                    <li>
+                        Know what behavior raises a user's chance of becoming infected with malware.
+                    </li>
+                    <li>
+                        Know what behavior lowers a user's chance of becoming infected with malware.
+                    </li>
+                    <li>
+                        Predict the chance of a user's machine becoming compromised.
+                    </li>
+                </ul>
+
+                <h5>Key Technologies Used:</h5>
+                <ul>
+                    <li>Bro</li>
+                    <li>WireShark</li>
+                    <li>Python</li>
+                </ul>
+
+                <p>
+                    During the summer 
+                </p>
+
+                <div class="text-container large-gap">
+                    <p>
+                        By the end of the summer, I had successfully completed the software program and had helped contribute to David's research project. He even thanked me for my work in his published research paper. The title of the ressearch paper is "Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" and you can read the full paper <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">here</a>.
+                    </p>
+                </div>
+
+                <div class="image-container">
+                    <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
+                        <img src="./images/sec_group.png" alt="Network Traffic Analysis">
+                    </a>
+                </div> -->
                 
 
                 <div class="parallax-container parallax-container-2"> </div>
