--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
                 <h5>Overview:</h5>
                 <p>
-                    I created a cryptocurrency trading bot strategy using Python and the Freqtrade framework. The bot uses technical analysis indicators in order to make buy and sell decisions. It is is fully automated allowing it to trade 24/7 and works on popular cryptocurrency exchanges such as Binance and Coinbase. My strategy achieved a Compound Annual Growth Rate (CAGR) of 60.90% over a 4 year period (2021-2025), significantly outperforming the S&P 500's historical CAGR of ~10%. 
+                    I created a cryptocurrency trading bot strategy using Python and the Freqtrade framework. The bot uses technical analysis indicators in order to make buy and sell decisions. It is is fully automated allowing it to trade 24/7 and works on popular cryptocurrency exchanges such as Binance and Coinbase. In backtesting, my strategy achieved a Compound Annual Growth Rate (CAGR) of 60.90% over a 4 year period (2021-2025), significantly outperforming the S&P 500's historical CAGR of ~10%. 
                 </p>
 
                 <h5>Key Technologies Used:</h5>
@@ -600,7 +600,7 @@
 
                 <h5>Overview:</h5>
                 <p>
-                    During the holiday season of 2020, myself and a small community of developers came together to create a bot that would automatically purchase a PlayStation 5 (PS5) from online retailers. This project was a response to the global shortage of PS5s caused by the COVID-19 pandemic and the actions of scalpers who were using bots to buy up all of the available stock and reselling them at grossly inflated prices.
+                    During the holiday season of 2020, myself and a small community of developers came together to create a bot that would automatically purchase a PlayStation 5 (PS5) from online retailers. This project was in response to the global shortage of PS5s caused by the COVID-19 pandemic and the actions of scalpers who were using bots to buy up all of the available stock and reselling them at grossly inflated prices.
                 </p>
 
                 <h5>Main Development Tasks:</h5>
