Added a bullet point

--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
                     <li><a href="https://pandas.pydata.org/" target="_blank" rel="noopener noreferrer">Pandas</a></li>
                     <li><a href="https://ta-lib.github.io/ta-lib-python/" target="_blank" rel="noopener noreferrer">TA-Lib</a></li>
                     <li>Docker</li>
+                    <li>Machine Learning</li>
                 </ul>
 
                 <p>
