--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     <li><a href="https://pandas.pydata.org/" target="_blank" rel="noopener noreferrer">Pandas</a></li>
                     <li><a href="https://ta-lib.github.io/ta-lib-python/" target="_blank" rel="noopener noreferrer">TA-Lib</a></li>
                     <li>Docker</li>
-                    <li>Machine Learning</li>
+                    <li>Machine Learning - <a href="https://www.geeksforgeeks.org/hyperparameters-optimization-methods-ml/" target="_blank" rel="noopener noreferrer">Hyperparameter Optimization</a></li>
                 </ul>
 
                 <p>
